--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
 
         <div class="mini-grid-container">
             <h3 class="title-text">Score: <span id="score">0</span></h3>
+            <p class="title-text" id="timer">00:00:00</p>
             <button class="btn" id="btn-start">Start / Pause</button>
             <div class="mini-grid"></div>
+            
+            <!-- TODO proper styles -->
+            <div class="description">
+                <p>Press <pre id="mono">space</pre> for pause</p>
+            </div>
         </div>
 
     </div>
 
-    <!-- TODO proper styles -->
-    <div class="description">
-        <p>Press <pre id="mono">space</pre> for pause</p>
-    </div>
 
     <div class="pause-menu-pop-up">
         <button class="btn">Start</button>
